[gd_scene load_steps=19 format=3 uid="uid://poa6t705dksv"]

[ext_resource type="Script" path="res://scripts/Player.gd" id="1_v1xto"]
[ext_resource type="AudioStream" uid="uid://bdyrh34vkx10q" path="res://assets/audio/SFX - Death Explosion.ogg" id="2_3lax8"]
[ext_resource type="AudioStream" uid="uid://bske0o7iccbbd" path="res://assets/audio/SFX - Success.ogg" id="3_wjrtl"]
[ext_resource type="AudioStream" uid="uid://cvur1pqnt3ubl" path="res://assets/audio/SFX - Main engine thrust.ogg" id="4_0r6ho"]
[ext_resource type="PackedScene" uid="uid://clr5ym753iw70" path="res://scenes/particles/booster_particles.tscn" id="5_osdvu"]
[ext_resource type="PackedScene" uid="uid://dcecb8hw7dbrv" path="res://scenes/particles/explosion_particles.tscn" id="6_apouj"]
[ext_resource type="PackedScene" uid="uid://jfwajmrh6ca7" path="res://scenes/particles/success_particles.tscn" id="7_x4pxd"]
[ext_resource type="Material" uid="uid://d0awnhv8j4ito" path="res://ship_blue_material.tres" id="8_k6qlg"]

[sub_resource type="CylinderMesh" id="CylinderMesh_tfgk8"]

[sub_resource type="CylinderShape3D" id="CylinderShape3D_vpknv"]

[sub_resource type="CylinderMesh" id="CylinderMesh_ob4y7"]
top_radius = 0.2
bottom_radius = 0.2
height = 1.5

[sub_resource type="CylinderMesh" id="CylinderMesh_j7ymx"]
top_radius = 0.0
bottom_radius = 0.2
height = 0.5

[sub_resource type="CylinderMesh" id="CylinderMesh_ivjmq"]
top_radius = 0.25
bottom_radius = 0.25
height = 0.25

[sub_resource type="CylinderMesh" id="CylinderMesh_st2ny"]
top_radius = 0.25
bottom_radius = 0.25
height = 0.4

[sub_resource type="BoxMesh" id="BoxMesh_h6f48"]
size = Vector3(0.15, 0.4, 0.15)

[sub_resource type="CylinderMesh" id="CylinderMesh_f3bg0"]
top_radius = 0.12
bottom_radius = 0.12
height = 0.5

[sub_resource type="BoxMesh" id="BoxMesh_hw2sn"]
size = Vector3(0.15, 0.4, 0.15)

[sub_resource type="CylinderMesh" id="CylinderMesh_8j6lw"]
top_radius = 0.12
bottom_radius = 0.12
height = 0.5

[node name="Player" type="RigidBody3D"]
axis_lock_linear_z = true
axis_lock_angular_x = true
axis_lock_angular_y = true
max_contacts_reported = 10
contact_monitor = true
linear_damp = 1.0
angular_damp = 3.0
script = ExtResource("1_v1xto")
thrust = 2044.64
torque_thrust = 431.25

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
visible = false
mesh = SubResource("CylinderMesh_tfgk8")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
visible = false
shape = SubResource("CylinderShape3D_vpknv")

[node name="ExplosionSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_3lax8")
volume_db = -5.622

[node name="SuccessSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_wjrtl")
volume_db = -3.748

[node name="BoostSound" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("4_0r6ho")

[node name="BoosterParticles" parent="." instance=ExtResource("5_osdvu")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1, 0)
emitting = false

[node name="BoosterParticlesRight" parent="." instance=ExtResource("5_osdvu")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.4, -1, 0)
emitting = false

[node name="BoosterParticlesLeft" parent="." instance=ExtResource("5_osdvu")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.4, -1, 0)
emitting = false

[node name="ExplosionParticles" parent="." instance=ExtResource("6_apouj")]

[node name="SuccessParticles" parent="." instance=ExtResource("7_x4pxd")]

[node name="Body" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.25, 0)
material_override = ExtResource("8_k6qlg")
mesh = SubResource("CylinderMesh_ob4y7")

[node name="Cockpit" type="MeshInstance3D" parent="Body"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
material_override = ExtResource("8_k6qlg")
mesh = SubResource("CylinderMesh_j7ymx")
skeleton = NodePath("../..")

[node name="Midriff" type="MeshInstance3D" parent="Body"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.25, 0)
material_override = ExtResource("8_k6qlg")
mesh = SubResource("CylinderMesh_ivjmq")
skeleton = NodePath("../..")

[node name="Midriff2" type="MeshInstance3D" parent="Body"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.550486, 0)
material_override = ExtResource("8_k6qlg")
mesh = SubResource("CylinderMesh_st2ny")
skeleton = NodePath("../..")

[node name="LeftBoster" type="MeshInstance3D" parent="Body"]
transform = Transform3D(0.707107, 0.707107, 0, -0.707107, 0.707107, 0, 0, 0, 1, -0.29, -0.17, 0)
material_override = ExtResource("8_k6qlg")
mesh = SubResource("BoxMesh_h6f48")

[node name="MeshInstance3D2" type="MeshInstance3D" parent="Body/LeftBoster"]
transform = Transform3D(0.707107, -0.707107, 0, 0.707107, 0.707107, 0, 0, 0, 1, 0.162217, -0.313627, 0)
material_override = ExtResource("8_k6qlg")
mesh = SubResource("CylinderMesh_f3bg0")
skeleton = NodePath("../..")

[node name="RightBooster" type="MeshInstance3D" parent="Body"]
transform = Transform3D(-0.707107, -0.707107, -8.74228e-08, -0.707107, 0.707107, 0, 6.18172e-08, 6.18172e-08, -1, 0.29, -0.17, 0)
material_override = ExtResource("8_k6qlg")
mesh = SubResource("BoxMesh_hw2sn")

[node name="MeshInstance3D2" type="MeshInstance3D" parent="Body/RightBooster"]
transform = Transform3D(0.707107, -0.707107, 0, 0.707107, 0.707107, 0, 0, 0, 1, 0.162217, -0.313627, 0)
material_override = ExtResource("8_k6qlg")
mesh = SubResource("CylinderMesh_8j6lw")
skeleton = NodePath("../..")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
